# Apolo

./: .env.exemple  .gitignore  DADOS_INICIAIS_DEPE_ZERO.sql  adicionar_tipo_documento_fileserver.py  analise_pdfs.py  carga_patrimonio.py  database.py  depe_backup.py  informacoes_ambientes.py  migration_with_polares.py  mongo_atendimento.py  mongo_gridfs.py  move_fileserver_files.py  movedata.py  painel_senha.py  patrimonio.sql  pyproject.toml  teste.py  todos_inserts.sql  utils.py  validar_fileserver.py  validar_mongodb.py
auditoria_infraestrutura/: valida_schema_auditoria.py
data/: tipo_documentos_fileserver_cesv.json
depe/: dados_iniciais.py
depe/data/: V07__DADOS_INICIAS_PROJETO_DEPE.sql
filserver/: gerencia_tipo_documento.py  tipo_documentos_cesv.json
filserver/data/: tipo_documentos_cesv.json
patrimonio/: dados_unidades_responsaveis.py  main.py
utils/: ambientes.py  gerar_json_tipo_documento_fileserver.py  gerenciar_json.py  gerenciar_sql.py  setup_logging.py
